--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,31 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Flask WebSocket Chat</title>
-    <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
-    <script>
-        var socket = io();
-        var username = prompt("Enter your name:");  // Ask for username
-        socket.emit("join", username);  // Notify server of new user
-
-        // Listen for messages from server
-        socket.on("message", function(data) {
-            var messages = document.getElementById("messages");
-            messages.innerHTML += `<p>${data}</p>`;
-        });
-
-        // Function to send messages
-        function sendMessage() {
-            var msgInput = document.getElementById("msg");
-            var message = msgInput.value;
-            socket.send(message);
-            msgInput.value = "";
-        }
-    </script>
 </head>
 <body>
-    <h2>Flask WebSocket Chat</h2>
-    <input id="msg" type="text" placeholder="Enter your message">
-    <button onclick="sendMessage()">Send</button>
-    <div id="messages"></div>
+    <h2>Rooms</h2>
+
+    {% for room in rooms %}
+        <a href="{{ url_for('chat', room_id=room) }}">{{ room }}</a>
+    {% endfor %}
 </body>
 </html>
